test: add comment for activej multi-worker RESP decode and reply perf test.